İlk olarak anasayfadaki sliderı admin menüden yönetilebilir hale getirdim. Ayrıca hemen altındaki promosyonların sınıfını da yarattım ama görselliğe taşımadım henüz.

--- a/app/templates_for_new_theme/__base.html
+++ b/app/templates_for_new_theme/__base.html
@@ -31,7 +31,8 @@
 
 {% include '_header_section.html' %}
 {% include '_menu_section.html' %}
-{% include '_slider_section.html' %}
+
+{% include "visual_site_elements/sliders/sliders.html" with object_list=sliders %}
 {% include '_promo_section.html' %}
 {% include '_products_section.html' %}
 {% include '_banner_section.html' %}
