--- a/app/templates_for_new_theme/__base.html
+++ b/app/templates_for_new_theme/__base.html
@@ -33,7 +33,8 @@
 {% include '_menu_section.html' %}
 
 {% include "visual_site_elements/sliders/sliders.html" with object_list=sliders %}
-{% include '_promo_section.html' %}
+{% include "visual_site_elements/promotions/promotions.html" with object_list=promotions %}
+
 {% include '_products_section.html' %}
 {% include '_banner_section.html' %}
 {% include '_popular_section.html' %}
