--- a/app/templates_for_new_theme/__base.html
+++ b/app/templates_for_new_theme/__base.html
@@ -15,13 +15,11 @@
 
 </head>
 <body>
-{% block content %}
-{# Bunu buraya mı koymak gerek bilemedim...#}
-{% endblock %}
+
 <!-- wpf loader Two -->
 <div id="wpf-loader-two">
     <div class="wpf-loader-two-inner">
-        <span>Loading</span>
+        <span>Yükleniyor...</span>
     </div>
 </div>
 <!-- / wpf loader Two -->
@@ -29,11 +27,16 @@
 <a class="scrollToTop" href="#"><i class="fa fa-chevron-up"></i></a>
 <!-- END SCROLL TOP BUTTON -->
 
+{% block content %}
+{# Bunu buraya mı koymak gerek bilemedim...#}
+{% endblock %}
 {% include '_header_section.html' %}
-{% include '_menu_section.html' %}
+{% include "visual_site_elements/menu/menu_items.html" with object_list=categories %}
+{#{% include '_menu_section.html' %}#}
 
 {% include "visual_site_elements/sliders/sliders.html" with object_list=sliders %}
 {% include "visual_site_elements/promotions/promotions.html" with object_list=promotions %}
+
 
 {% include '_products_section.html' %}
 {% include '_banner_section.html' %}
@@ -46,6 +49,7 @@
 {% include '_footer_section.html' %}
 {% include '_login_modal_form.html' %}
 {% include '_javascript_section.html' %}
+
 
 </body>
 </html>
