QuickView'ın çalışması sağlandı...

--- a/app/templates_for_new_theme/products/products.html
+++ b/app/templates_for_new_theme/products/products.html
@@ -809,7 +809,7 @@
                                                    title="Compare"><span class="fa fa-exchange"></span></a>
                                                 <a href="#" data-toggle2="tooltip" data-placement="top"
                                                    title="Quick View" data-toggle="modal"
-                                                   data-target="#quick-view-modal"><span
+                                                   data-target="#quick-view-modal" ><span
                                                         class="fa fa-search"></span></a>
                                             </div>
                                             <!-- product badge -->
@@ -844,22 +844,22 @@
                                                                 </div>
                                                             </div>
                                                             <div class="simpleLens-thumbnails-container">
-                                                                <a href="#" class="simpleLens-thumbnail-wrapper"
-                                                                   data-lens-image="img/view-slider/large/polo-shirt-1.png"
-                                                                   data-big-image="img/view-slider/medium/polo-shirt-1.png">
-                                                                    <img src="{% static 'img/view-slider/thumbnail/polo-shirt-1.png' %}">
-                                                                </a>
-                                                                <a href="#" class="simpleLens-thumbnail-wrapper"
-                                                                   data-lens-image="img/view-slider/large/polo-shirt-3.png"
-                                                                   data-big-image="img/view-slider/medium/polo-shirt-3.png">
-                                                                    <img src="{% static 'img/view-slider/thumbnail/polo-shirt-3.png' %}">
-                                                                </a>
-
-                                                                <a href="#" class="simpleLens-thumbnail-wrapper"
-                                                                   data-lens-image="img/view-slider/large/polo-shirt-4.png"
-                                                                   data-big-image="img/view-slider/medium/polo-shirt-4.png">
-                                                                    <img src="{% static 'img/view-slider/thumbnail/polo-shirt-4.png' %}">
-                                                                </a>
+{#                                                                <a href="#" class="simpleLens-thumbnail-wrapper"#}
+{#                                                                   data-lens-image="img/view-slider/large/polo-shirt-1.png"#}
+{#                                                                   data-big-image="img/view-slider/medium/polo-shirt-1.png">#}
+{#                                                                    <img src="{% static 'img/view-slider/thumbnail/polo-shirt-1.png' %}">#}
+{#                                                                </a>#}
+{#                                                                <a href="#" class="simpleLens-thumbnail-wrapper"#}
+{#                                                                   data-lens-image="img/view-slider/large/polo-shirt-3.png"#}
+{#                                                                   data-big-image="img/view-slider/medium/polo-shirt-3.png">#}
+{#                                                                    <img src="{% static 'img/view-slider/thumbnail/polo-shirt-3.png' %}">#}
+{#                                                                </a>#}
+{##}
+{#                                                                <a href="#" class="simpleLens-thumbnail-wrapper"#}
+{#                                                                   data-lens-image="img/view-slider/large/polo-shirt-4.png"#}
+{#                                                                   data-big-image="img/view-slider/medium/polo-shirt-4.png">#}
+{#                                                                    <img src="{% static 'img/view-slider/thumbnail/polo-shirt-4.png' %}">#}
+{#                                                                </a>#}
                                                             </div>
                                                         </div>
                                                     </div>
@@ -867,22 +867,22 @@
                                                 <!-- Modal view content -->
                                                 <div class="col-md-6 col-sm-6 col-xs-12">
                                                     <div class="aa-product-view-content">
-                                                        <h3>T-Shirt</h3>
+                                                        <h3 class="modal-product-title">T-Shirt</h3>
                                                         <div class="aa-price-block">
                                                             <span class="aa-product-view-price">$34.99</span>
-                                                            <p class="aa-product-avilability">Avilability: <span>In stock</span>
+                                                            <p class="aa-product-avilability">Stok durumu: <span>10+</span>
                                                             </p>
                                                         </div>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                                        <p class="modal-product-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                                             Officiis animi, veritatis quae repudiandae quod nulla porro
                                                             quidem, itaque quis quaerat!</p>
-                                                        <h4>Size</h4>
-                                                        <div class="aa-prod-view-size">
-                                                            <a href="#">S</a>
-                                                            <a href="#">M</a>
-                                                            <a href="#">L</a>
-                                                            <a href="#">XL</a>
-                                                        </div>
+{#                                                        <h4>Size</h4>#}
+{#                                                        <div class="aa-prod-view-size">#}
+{#                                                            <a href="#">S</a>#}
+{#                                                            <a href="#">M</a>#}
+{#                                                            <a href="#">L</a>#}
+{#                                                            <a href="#">XL</a>#}
+{#                                                        </div>#}
                                                         <div class="aa-prod-quantity">
                                                             <form action="">
                                                                 <select name="" id="">
@@ -895,13 +895,13 @@
                                                                 </select>
                                                             </form>
                                                             <p class="aa-prod-category">
-                                                                Category: <a href="#">Polo T-Shirt</a>
+                                                                Kategori: <a class="category-url" href="#">Polo T-Shirt</a>
                                                             </p>
                                                         </div>
                                                         <div class="aa-prod-view-bottom">
                                                             <a href="#" class="aa-add-to-cart-btn"><span
-                                                                    class="fa fa-shopping-cart"></span>Add To Cart</a>
-                                                            <a href="#" class="aa-add-to-cart-btn">View Details</a>
+                                                                    class="fa fa-shopping-cart"></span>Sepete At</a>
+                                                            <a href="#" class="aa-add-to-cart-btn view-product-details">Ürün Detayı</a>
                                                         </div>
                                                     </div>
                                                 </div>
