--- a/app/templates_for_new_theme/javascript.html
+++ b/app/templates_for_new_theme/javascript.html
@@ -36,3 +36,36 @@
     })
 
 </script>
+
+<script>
+    $('#quick-view-modal').on('show.bs.modal', function (event) {
+
+        var button = $(event.relatedTarget); // Button that triggered the modal
+        var title = button.data('title'); // Extract info from data-* attributes
+        var description = button.data('description');
+        var url = button.data('url');
+        var imagehd = button.data('imagehd');
+        var imagesd = button.data('imagesd');
+        var imagemicro = button.data('imagemicro');
+        var category = button.data('category');
+        var category_url = button.data('category_url');
+
+
+  // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
+  // Update the modal's content. We'll use jQuery here, but you could use a data binding library or
+  // other methods instead.
+        var modal = $(this);
+        modal.find('.modal-product-title').text(title);
+        modal.find(".modal-product-description").text(description);
+        modal.find('.view-product-details').attr("href", url);
+        modal.find('.simpleLens-big-image').attr("src", imagehd);
+        modal.find('.simpleLens-lens-image').attr('data-lens-image', imagehd);
+        modal.find('.simpleLens-thumbnail-wrapper').attr('data-lens-image', imagehd);
+        modal.find('.simpleLens-thumbnail-wrapper').attr('data-big-image', imagehd);
+        modal.find('.simpleLens-thumbnail-wrapper').attr('src', imagesd);
+        modal.find('.category-url').attr("href", category_url);
+        modal.find(".category-url").text(category);
+
+
+})
+</script>
