--- a/app/templates_for_new_theme/products/single_product.html
+++ b/app/templates_for_new_theme/products/single_product.html
@@ -3,9 +3,9 @@
 <!-- start single product item -->
 <li>
     <figure>
-        {% if product|get_thumbnail:"sd" %}
+        {% if product|get_thumbnail:"medium" %}
         <a class="aa-product-img" href='{{ product.get_absolute_url }}'>
-            <img id='img' class='img-responsive' src='{{ product|get_thumbnail:"sd"}}'
+            <img id='img' class='img-responsive' src='{{ product|get_thumbnail:"medium"}}'
             alt="{{ product.title|lower }} img" />
         </a>
         {% endif %}
@@ -18,13 +18,22 @@
         </figcaption>
     </figure>
     <div class="aa-product-hvr-content">
-        <a href="#" data-toggle="tooltip" data-placement="top"
-           title="Add to Wishlist"><span class="fa fa-heart-o"></span></a>
-        <a href="#" data-toggle="tooltip" data-placement="top"
-           title="Compare"><span class="fa fa-exchange"></span></a>
+{#        <a href="#" data-toggle="tooltip" data-placement="top"#}
+{#           title="Add to Wishlist"><span class="fa fa-heart-o"></span></a>#}
+{#        <a href="#" data-toggle="tooltip" data-placement="top"#}
+{#           title="Compare"><span class="fa fa-exchange"></span></a>#}
         <a href="#" data-toggle2="tooltip" data-placement="top"
            title="Quick View" data-toggle="modal"
-           data-target="#quick-view-modal"><span
+           data-target="#quick-view-modal"
+           data-title="{{ product.title }}"
+           data-url="{{ product.get_absolute_url }}"
+           data-description="{{ product.description|truncatechars:200}}"
+           data-imagehd = '{{ product|get_thumbnail:"hd"}}'
+           data-imagesd = '{{ product|get_thumbnail:"sd"}}'
+           data-imagemicro = '{{ product|get_thumbnail:"micro"}}'
+           data-category = "{{ product.get_main_category }}"
+           data-category_url = "{{ product.get_main_category.get_absolute_url }}"
+        ><span
                 class="fa fa-search"></span></a>
     </div>
     <!-- product badge -->
