--- a/app/templates_for_new_theme/products/single_product.html
+++ b/app/templates_for_new_theme/products/single_product.html
@@ -34,6 +34,7 @@
            data-description="{{ product.description|truncatechars:200}}"
            data-imagehd = '{{ product|get_thumbnail:"hd"}}'
            data-imagesd = '{{ product|get_thumbnail:"sd"}}'
+           data-imagemedium = '{{ product|get_thumbnail:"medium"}}'
            data-imagemicro = '{{ product|get_thumbnail:"micro"}}'
            data-category = "{{ product.get_main_category }}"
            data-category_url = "{{ product.get_main_category.get_absolute_url }}"
