popular ürünler ve sizin için seçtiklerimiz düzenlendi...

--- a/app/templates_for_new_theme/home.html
+++ b/app/templates_for_new_theme/home.html
@@ -27,7 +27,7 @@
 
 {% block popular %}
 {#    {% include '_popular_section.html' %}#}
-    {% include "products/products.html" with object_list=products2 %}
+    {% include "products/popular_products.html" with object_list=products2 %}
 {% endblock %}
 
 {% block support %}
