horizontal banner eklendi...

--- a/app/templates_for_new_theme/home.html
+++ b/app/templates_for_new_theme/home.html
@@ -22,7 +22,7 @@
 {% endblock %}
 
 {% block banners %}
-    {% include '_banner_section.html' %}
+    {% include "visual_site_elements/horizontal_banner/horizontal_banner.html" with object_list=horizontal_banner %}
 {% endblock %}
 
 {% block popular %}
