--- a/app/templates_for_new_theme/__base.html
+++ b/app/templates_for_new_theme/__base.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Daily Shop | Home</title>
+    {% block title %}
+        <title>İştebu! | Yaşamınızı Kolaylaştırır </title>
+    {% endblock %}
 
     {% include '_head_css.html' %}
 
