--- a/app/templates_for_new_theme/_header_section.html
+++ b/app/templates_for_new_theme/_header_section.html
@@ -123,8 +123,13 @@
                         <!-- / cart box -->
                         <!-- search box -->
                         <div class="aa-search-box">
-                            <form action="">
-                                <input type="text" name="" id="" placeholder="Search here ex. 'man' ">
+{#                            <form action="">#}
+{#                                <input type="text" name="" id="" placeholder="Search here ex. 'man' ">#}
+{#                                <button type="submit"><span class="fa fa-search"></span></button>#}
+{#                            </form>#}
+                            <form method="GET" role="search" action='{% url "products:products" %}'>
+                                <input type="text" id="" placeholder="Ara" name="q"
+                                value='{{ request.GET.q }}'>
                                 <button type="submit"><span class="fa fa-search"></span></button>
                             </form>
                         </div>
