--- a/app/templates_for_new_theme/__base.html
+++ b/app/templates_for_new_theme/__base.html
@@ -16,7 +16,8 @@
     </style>
 
 </head>
-<body>
+
+<body {% if product_list_page %} class="productPage" {% endif %}>
 
 <!-- wpf loader Two -->
 <div id="wpf-loader-two">
