--- a/app/templates_for_new_theme/_subscribe_section.html
+++ b/app/templates_for_new_theme/_subscribe_section.html
@@ -7,7 +7,7 @@
                 <div class="aa-subscribe-area">
                     <h3>Haber Bülteni</h3>
                     <p>Tüm yeniliklerden haberdar olmak için haber bültenimize kayıt olun!</p>
-                    <form action="" method="post" class="aa-subscribe-form">{% csrf_token %}
+                    <form action="." method="post" class="aa-subscribe-form">{% csrf_token %}
                         {{ form|crispy }}
 {#                        <input type="email" name="" id="" placeholder="E-posta adresiniz">#}
                         <input type="submit" value="Kayıt Ol">
