--- a/app/templates_for_new_theme/products/product_list.html
+++ b/app/templates_for_new_theme/products/product_list.html
@@ -8,7 +8,6 @@
 
 
 {% block content %}
-
 <!-- catg header banner section -->
 <section id="aa-catg-head-banner">
     <img src='{% static "img/fashion/fashion-header-bg-8.jpg" %}' alt="fashion img">
@@ -60,33 +59,41 @@
                     <div class="aa-product-catg-body">
                         <ul class="aa-product-catg">
                             <!-- start single product item -->
-                           {% for product in object_list %}
+                           {% for product in page_products %}
                                {% include "products/single_product.html" with product=product price="True" %}
                            {% endfor %}
                         </ul>
                         {% include "products/quick_view_modal.html" %}
                     </div>
-                    <div class="aa-product-catg-pagination">
-                        <nav>
-                            <ul class="pagination">
-                                <li>
-                                    <a href="#" aria-label="Previous">
-                                        <span aria-hidden="true">&laquo;</span>
-                                    </a>
-                                </li>
-                                <li><a href="#">1</a></li>
-                                <li><a href="#">2</a></li>
-                                <li><a href="#">3</a></li>
-                                <li><a href="#">4</a></li>
-                                <li><a href="#">5</a></li>
-                                <li>
-                                    <a href="#" aria-label="Next">
-                                        <span aria-hidden="true">&raquo;</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
+                    <!-- start pagination section -->
+                    {% if is_paginated %}
+                        <div class="aa-product-catg-pagination">
+                            <nav>
+                                <ul class="pagination">
+                                    {% if page_obj.has_previous %}
+                                        <li>
+                                            <a href="/products?page={{ page_obj.previous_page_number }}"
+                                               aria-label="Previous"><span aria-hidden="true">&laquo;</span></a>
+                                        </li>
+                                    {% endif %}
+                                    <li>
+                                        <span class="page-current">
+                                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                                        </span>
+                                    </li>
+                                    {% if page_obj.has_next %}
+                                        <li>
+                                            <a href="/products?page={{ page_obj.next_page_number }}"
+                                            aria-label="Next">
+                                                <span aria-hidden="true">&raquo;</span>
+                                            </a>
+                                        </li>
+                                    {% endif %}
+                                </ul>
+                            </nav>
+                        </div>
+                    {% endif %}
+                    <!-- end pagination section -->
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-4 col-md-pull-9">
@@ -130,7 +137,7 @@
                         </div>
 
                     </div>
-                    <!-- single sidebar -->
+{#                    <!-- single sidebar -->#}
 {#                    <div class="aa-sidebar-widget">#}
 {#                        <h3>Shop By Color</h3>#}
 {#                        <div class="aa-color-tag">#}
@@ -216,7 +223,7 @@
 
 {% endblock %}
 
-{% block subscribe %}
-    {% include '_subscribe_section.html' with form=form %}
-{% endblock %}
+{#{% block subscribe %}#}
+{#    {% include '_subscribe_section.html' with form=signup_form %}#}
+{#{% endblock %}#}
 
