--- a/app/templates_for_new_theme/products/product_list.html
+++ b/app/templates_for_new_theme/products/product_list.html
@@ -78,7 +78,7 @@
                                     {% endif %}
                                     <li>
                                         <span class="page-current">
-                                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                                        Sayfa {{ page_obj.number }} / {{ page_obj.paginator.num_pages }}.
                                         </span>
                                     </li>
                                     {% if page_obj.has_next %}
@@ -100,14 +100,19 @@
                 <aside class="aa-sidebar">
                     <!-- single sidebar -->
                     <div class="aa-sidebar-widget">
-                        <h3>Kategoriler</h3>
-                        <ul class="aa-catg-nav">
-                            <li><a href="#">Men</a></li>
-                            <li><a href="">Women</a></li>
-                            <li><a href="">Kids</a></li>
-                            <li><a href="">Electornics</a></li>
-                            <li><a href="">Sports</a></li>
-                        </ul>
+{#                        <h3>Kategoriler</h3>#}
+{#                        <ul class="aa-catg-nav">#}
+{#                            <li><a href="#">Men</a></li>#}
+{#                            <li><a href="">Women</a></li>#}
+{#                            <li><a href="">Kids</a></li>#}
+{#                            <li><a href="">Electronics</a></li>#}
+{#                            <li><a href="">Sports</a></li>#}
+{#                        </ul>#}
+                        <form method="GET" action="{% url 'products:products' %}">
+                            {{ filter_form|crispy }}
+                                <input type='hidden' name='q' value='{{ request.GET.q }}'/>
+                                <input type='submit' value='Apply Filter' class='btn btn-default'>
+                        </form>
                     </div>
                     <!-- single sidebar -->
                     <div class="aa-sidebar-widget">
