--- a/app/templates_for_new_theme/products/product_list.html
+++ b/app/templates_for_new_theme/products/product_list.html
@@ -153,13 +153,11 @@
                                 <button id="filter-btn" class="aa-filter-btn" type="submit">Filtrele</button>
                             </form>
                             </br>
-{#                            <h2><a style="border-radius:0px;#}
-{#                                    -webkit-border-radius:0px;#}
-{#                                    -moz-border-radius:0px;"#}
-{#                                   class="btn btn-info btn-block" href="/products/">Tüm Filtreleri Temizle</a></h2>#}
                             <div class="row" align="center">
                                 <a href="/products">
-                                    <button class="aa-filter-btn" style="width: 100%" type="submit">Filtreleri Temizle</button>
+                                    <button class="aa-filter-btn"
+                                            style="width: 100%; height: 2.2em; font-size: large"
+                                            type="submit">Filtreleri Temizle</button>
                                 </a>
                             </div>
                             <input id='minrange' type="hidden" name="min_price" value="{{ minimum_price }}">
