product 'lar için analytics eklendi...

--- a/app/templates_for_new_theme/products/product_list.html
+++ b/app/templates_for_new_theme/products/product_list.html
@@ -265,3 +265,6 @@
 {#    {% include '_subscribe_section.html' with form=signup_form %}#}
 {#{% endblock %}#}
 
+{% block jquery %}
+
+{% endblock %}
