--- a/app/templates_for_new_theme/products/home_page_products.html
+++ b/app/templates_for_new_theme/products/home_page_products.html
@@ -23,7 +23,7 @@
                                            {% include "products/single_product.html" with product=product price="True" %}
                                        {% endfor %}
                                     </ul>
-                                    <a class="aa-browse-btn" href="#">TÜMÜNE GÖZAT <span
+                                    <a class="aa-browse-btn" href="/products">TÜMÜNE GÖZAT <span
                                             class="fa fa-long-arrow-right"></span></a>
                                 </div>
 
